# warehouse-inventory-env

./: Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  warehouse_env.py
server/: app.py
